--- a/style.css
+++ b/style.css
@@ -142,6 +142,14 @@ a:hover {
     color: #75d5ff;
 }
 
+.sub-menu {
+    display: none;
+}
+
+.sub-menu:hover {
+    display: block;
+}
+
 /* ///////////////////////////////////////////// */
 /* Main Hero */
 
@@ -149,11 +157,12 @@ a:hover {
     height: auto;
     width: 100%;
     background-image: linear-gradient(180deg, rgb(48, 48, 48) , #0030a3);
+    position: relative;
 }
 
 .welcome {
     position: absolute;
-    top: 85%;
+    top: 65%;
     margin-bottom: 5rem;
     right: 0%;
     color: #fff;
